--- a/src/Styles/SweetAlerts.css
+++ b/src/Styles/SweetAlerts.css
@@ -9,6 +9,7 @@
 /* Modal Button Styles */
 .swal-button {
   background-color: #0066ff;
+  border: 1px solid #0066ff;
   border-radius: 3px;
   height: 35px;
   width: 80px;
@@ -17,12 +18,23 @@
   transition: linear 200ms;
   font-size: 10px;
   font-weight: normal;
+  color: white;
 }
 
 .swal-button:focus {
   box-shadow: none;
 }
 
+.swal-button--cancel {
+  background: transparent;
+  border: 1px solid #bbb;
+  color: #bbb;
+}
+
 .swal-button:not([disabled]):hover {
   background-color: #0066ff;
+}
+
+.swal-button--cancel:not([disabled]):hover {
+  background-color: transparent;
 }
