--- a/src/Styles/SweetAlerts.css
+++ b/src/Styles/SweetAlerts.css
@@ -16,7 +16,7 @@
   outline: none;
   padding: 0;
   transition: linear 200ms;
-  font-size: 10px;
+  font-size: 12px;
   font-weight: normal;
   color: white;
 }
@@ -26,9 +26,9 @@
 }
 
 .swal-button--cancel {
-  background: transparent;
-  border: 1px solid #bbb;
-  color: #bbb;
+  background: #e0e1e2;
+  border: 1px solid #e0e1e2;
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .swal-button:not([disabled]):hover {
@@ -36,5 +36,6 @@
 }
 
 .swal-button--cancel:not([disabled]):hover {
-  background-color: transparent;
+  background-color: #cacbcd;
+  border-color: #cacbcd;
 }
