--- a/src/Styles/SweetAlerts.css
+++ b/src/Styles/SweetAlerts.css
@@ -32,7 +32,7 @@
 }
 
 .swal-button:not([disabled]):hover {
-  background-color: #2185d0;
+  background-color: #1678c2;
 }
 
 .swal-button--cancel:not([disabled]):hover {
